<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navigation_contatti"
        android:enabled="true"
        android:icon="@drawable/baseline_person_outline_24"
        android:title="@string/title_contatti"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navigation_corsi"
        android:icon="@drawable/baseline_play_lesson_24"
        android:title="@string/title_corsi"
        app:showAsAction="never"/>
    <item
        android:id="@+id/navigation_iscrizioni"
        android:icon="@drawable/baseline_person_add_alt_1_24"
        android:title="@string/title_iscrizioni"
        app:showAsAction="never"/>
    <item
        android:id="@+id/navigation_presenze"
        android:icon="@drawable/baseline_checklist_rtl_24"
        android:title="@string/title_presenza"
        app:showAsAction="never"/>
    <item
        android:id="@+id/navigation_totali"
        android:icon="@drawable/baseline_query_stats_24"
        android:title="@string/title_totali"
        app:showAsAction="never"/>
    <item
        android:id="@+id/navigation_esci"
        android:icon="@drawable/baseline_exit_to_app_24"
        android:title="Esci"
        app:showAsAction="ifRoom"/>
</menu>